# movie-recommender

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/movie_rec/: __init__.py  config.py  logging_config.py
backend/src/movie_rec/api/: main.py  posters.py  schemas.py
backend/src/movie_rec/data/: loader.py
backend/src/movie_rec/evaluation/: __init__.py  evaluate.py
backend/src/movie_rec/features/: __init__.py  text.py
backend/src/movie_rec/recommender/: __init__.py  build.py  model.py  ranking.py
backend/tests/: conftest.py  test_api.py  test_evaluate.py  test_model.py  test_ranking.py  test_text.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: MovieCard.tsx  SearchBar.tsx  SkeletonGrid.tsx  States.tsx
