[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "0.1.0"
description = "Content-based movie recommender (TMDB 5000) with a popularity-blended ranker."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Harsh Gupta", email = "guharsh3@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "nltk==3.9.1",
    "rapidfuzz==3.9.7",
    "joblib==1.4.2",
    "fastapi==0.112.2",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "slowapi==0.1.9",
    "python-json-logger==2.0.7",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
data = ["kagglehub==0.3.0"]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "black==24.8.0",
    "ruff==0.6.2",
]

[project.scripts]
movierec-load = "movie_rec.data.loader:main"
movierec-build = "movie_rec.recommender.build:main"
movierec-evaluate = "movie_rec.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
